replace guava classes with JDK API