@@ -19,28 +19,31 @@ import static org.junit.Assert.assertEquals;
 
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableMap;
+import java.util.LinkedHashMap;
+import java.util.Map;
 
 public class CookieCodecTest {
 
   @Test
   public void encode() {
-    assertEquals("success=OK", Cookie.URL_ENCODER.apply(ImmutableMap.of("success", "OK")));
+    assertEquals("success=OK", Cookie.URL_ENCODER.apply(Map.of("success", "OK")));
     assertEquals("success=semi%3Bcolon",
-        Cookie.URL_ENCODER.apply(ImmutableMap.of("success", "semi;colon")));
+        Cookie.URL_ENCODER.apply(Map.of("success", "semi;colon")));
     assertEquals("success=eq%3Duals",
-        Cookie.URL_ENCODER.apply(ImmutableMap.of("success", "eq=uals")));
+        Cookie.URL_ENCODER.apply(Map.of("success", "eq=uals")));
 
-    assertEquals("success=OK&error=404",
-        Cookie.URL_ENCODER.apply(ImmutableMap.of("success", "OK", "error", "404")));
+    Map<String, String> map = new LinkedHashMap<>();
+    map.put("success", "OK");
+    map.put("error", "404");
+    assertEquals("success=OK&error=404", Cookie.URL_ENCODER.apply(map));
   }
 
   @Test
   public void decode() {
-    assertEquals(ImmutableMap.of("success", "OK"), Cookie.URL_DECODER.apply("success=OK"));
-    assertEquals(ImmutableMap.of("success", "OK", "foo", "bar"),
+    assertEquals(Map.of("success", "OK"), Cookie.URL_DECODER.apply("success=OK"));
+    assertEquals(Map.of("success", "OK", "foo", "bar"),
         Cookie.URL_DECODER.apply("success=OK&foo=bar"));
-    assertEquals(ImmutableMap.of("semicolon", "semi;colon"),
+    assertEquals(Map.of("semicolon", "semi;colon"),
         Cookie.URL_DECODER.apply("semicolon=semi%3Bcolon"));
   }
 }
