@@ -17,6 +17,8 @@ package org.jooby.internal;
 
 import static org.junit.Assert.assertEquals;
 
+import java.util.List;
+import java.util.Map;
 import java.util.concurrent.atomic.AtomicBoolean;
 
 import org.jooby.MediaType;
@@ -24,8 +26,6 @@ import org.jooby.Route;
 import org.jooby.Route.Filter;
 import org.junit.Test;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 
 public class FallbackRouteTest {
 
@@ -35,7 +35,7 @@ public class FallbackRouteTest {
     Filter filter = (req, rsp, chain) -> {
       handled.set(true);
     };
-    FallbackRoute route = new FallbackRoute("foo", "GET", "/x", ImmutableList.of(MediaType.json),
+    FallbackRoute route = new FallbackRoute("foo", "GET", "/x", List.of(MediaType.json),
         filter);
 
     assertEquals(true, route.apply(null));
@@ -46,8 +46,8 @@ public class FallbackRouteTest {
     assertEquals("foo", route.name());
     assertEquals("/x", route.path());
     assertEquals("/x", route.pattern());
-    assertEquals(ImmutableList.of(MediaType.json), route.produces());
-    assertEquals("/x", route.reverse(ImmutableMap.of()));
+    assertEquals(List.of(MediaType.json), route.produces());
+    assertEquals("/x", route.reverse(Map.of()));
     assertEquals("/x", route.reverse("a", "b"));
     assertEquals(Route.Source.BUILTIN, route.source());
     route.handle(null, null, null);
